--- a/index.html
+++ b/index.html
@@ -7,29 +7,38 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" 
          rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" 
         crossorigin="anonymous" 
         />
+        
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+
+        <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+        rel="stylesheet" />
+
+        <link rel="stylesheet" href="styles/portfolio.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
+
     <script src="https://kit.fontawesome.com/f70ea1a414.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    
    
 </head>
 
 <body>
-    <div class="d-flex bg-warning">
-        <h1>Hello world</h1>
-        <p>Hi there</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+    <p>👋Hello, I am</p>
+    <h1>Kutlwano Ralehlaka</h1>
+    <h2 class="mb-5">Front-end developer based in South Africa</h2>
+    <div>
+    <a href="#" class="btn btn-branding">Contact me</a>
+    </div>
     </div>
 </body>
 
