--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Front-end Developer - Kutlwano Ralehlaka</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" 
          rel="stylesheet"
@@ -32,12 +32,37 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="/" title="Homepage">Kutlwano Ralelaka</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/" tilte="Homepage">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about.html" title="About Matt Delac">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about.html#contact" title="Contact Matt Delac">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
     <div class="hero">
         <p>👋 Hello, I am</p>
         <h1>Kutlwano Ralehlaka</h1>
-        <h2 class="mb-5">Front-end developer based in South Africa</h2>
+        <h2 class="mb-5">🇿🇦 Front-end developer based in South Africa</h2>
         <div>
-            <a href="#" class="btn btn-branding">Contact me</a>
+            <a href="/about.html#contact" class="btn btn-branding" title="Contact Kutlwano Ralehlaka">Contact me</a>
+            <a href="/about.html" class="btn btn-branding-outline" title="About Kutlwano Ralehlaka">About me</a>
         </div>
     </div>
     <p class="text-center m-5">
@@ -57,7 +82,7 @@
                         they live in Bookmarksgrove right at the coast of the Semantics, a
                         large language ocean. A small river named Duden flows by
                     </p>
-                    <a href="" class="btn btn-branding-outline"> Learn more </a>
+                    <a href="" class="btn btn-branding"> Launch Yogurt App </a>
                 </div>
             </div>
         </div>
@@ -71,7 +96,7 @@
                         they live in Bookmarksgrove right at the coast of the Semantics, a
                         large language ocean. A small river named Duden flows by
                     </p>
-                    <a href="" class="btn btn-branding-outline"> Learn more </a>
+                    <a href="" class="btn btn-branding"> Launch Weather App</a>
                 </div>
             </div>
             <div class="col d-none d-lg-block">
@@ -91,7 +116,7 @@
                         they live in Bookmarksgrove right at the coast of the Semantics, a
                         large language ocean. A small river named Duden flows by
                     </p>
-                    <a href="" class="btn btn-branding-outline"> Learn more </a>
+                    <a href="" class="btn btn-branding"> Launch Yoga App </a>
                 </div>
             </div>
         </div>
